tests/errors/duplicate-cells.futil
import "primitives/std.lib";

component main() -> () {
  cells {
    r = prim std_reg(32);
    r = prim std_reg(32);
  }
  wires { }
  control { }
}
